fix: properly allocate space for scrollbar in channel list

--- a/css/toolbar/channel-list.css
+++ b/css/toolbar/channel-list.css
@@ -62,7 +62,7 @@
 
 #menuContainer #navMenuContent .channelList .search-clear {
     position: absolute;
-    right: 50px;
+    right: 60px;
     top: 50%;
     transform: translateY(-50%);
     color: #888;
